--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "pg": "^8.11.0",
     "redis": "^4.6.7",
     "uuid": "^9.0.0",
